<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:fitsSystemWindows="true"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topMaterialTB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                app:menu="@menu/app_bar_menu"
                app:navigationIcon="@drawable/ic_back_navigation"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:text="UI/UX Designer" />

        <TextView
            android:id="@+id/salary_full"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="Уровень дохода не указан" />

        <TextView
            android:id="@+id/experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="Требуемый опыт: от 1 года до 3 лет" />

        <TextView
            android:id="@+id/schedules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="Полная занятость, полный день" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="24dp"
            android:orientation="horizontal">

            <include
                android:id="@+id/card_response"
                layout="@layout/item_small_cardview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1" />

            <include
                android:id="@+id/card_viewed"
                layout="@layout/item_small_cardview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/cardview_background"
            app:cardCornerRadius="8dp"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_clock"
                    android:drawablePadding="4dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="Мобирикс" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/background_image"
                    android:contentDescription="@string/image"
                    android:scaleType="fitXY"
                    android:src="@drawable/image_map" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="Минск, улица Бирюзова, 4/5" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="Мы ищем специалиста на позицию UX/UI Designer, который вместе с коллегами будет заниматься проектированием пользовательских интерфейсов внутренних и внешних продуктов компании." />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Ваши задачи" />

        <TextView
            android:id="@+id/responsibilities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="- проектирование пользовательских сценариев и создание прототипов;\n- разработка интерфейсов для продуктов компании (Web+App);\n- работа над созданием и улучшением Дизайн-системы;\n- взаимодействие с командами frontend-разработки;\n- контроль качества внедрения дизайна;\n- ситуативно: создание презентаций и других материалов на основе фирменного стиля компании" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/ask_question"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/responce_on_vacancy_text"
            android:textColor="@color/response_text_color"
            android:textSize="14sp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupCompletedSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_callback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/button_green_color"
            android:text="@string/button_callback"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>

</ScrollView>